src/objects/AFSC__FSContentScanJob__c.object
<CustomObject>
    <description>F-Secure Cloud Protection: Content scan jobs</description>
    <fields>
        <fullName>AFSC__ContentVersionId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ContentVersionId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AFSC__File_Prevalence__c</fullName>
        <label>File Prevalence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AFSC__File_Reputation_Rating__c</fullName>
        <label>File Reputation Rating</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AFSC__Infection_Name__c</fullName>
        <label>Infection Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AFSC__Is_Download__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Download</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AFSC__Scan_Result__c</fullName>
        <label>Scan Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__Sha1__c</fullName>
        <label>Sha1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AFSC__Verdict__c</fullName>
        <label>Verdict</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unsafe</fullName>
                </value>
                <value>
                    <fullName>Safe</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Content Scan Job</label>
    <nameField>
        <label>Content Scan Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Content Scan Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>